# sensor-swarm

./: Cargo.toml  DISTRIBUTED_TESTING.md  HOW_TO_RUN_TESTS.md  Makefile.toml  TESTING.md  build.rs  memory.x  qemu-runner.sh  test_compilation.sh
.bobbin/: config
.cargo/: config  config-hil.toml  config.toml
.junie/: guidelines.md
src/: app.rs  backup_domain.rs  boot_task.rs  commands.rs  hw.rs  lib.rs  logging.rs  main.rs  radio.rs  sensors.rs  terminal.rs  testing.rs  usb.rs  usb_commands.rs
src/boot_task/: dfu_reboot.rs
src/commands/: executor.rs  input.rs  parser.rs  response.rs
src/hw/: blackpill_f401.rs  pipico.rs  traits.rs  types.rs
src/hw/blackpill_f401/: backup_registers.rs  device.rs  flash.rs  gpio.rs  led.rs  mod.rs  usb.rs  usb_defmt_logger.rs
src/hw/pipico/: backup_registers.rs  device.rs  flash.rs  gpio.rs  led.rs  usb.rs  usb_defmt_logger.rs
src/radio/: mod.rs  protocol.rs  traits.rs
src/sensors/: mod.rs  traits.rs
src/testing/: blackpill_f401.rs  hil.rs
src/usb_commands/: parser.rs  responses.rs  sensor_commands.rs  system_commands.rs
tests/: hil.rs  integration.rs  parser.rs
