[package]
name = "sensor-swarm"
version = "0.1.0"
edition = "2021"

[features]
default = ["blackpill-f401", "embedded"]
blackpill-f401 = []
hil = []
defmt-test = ["dep:defmt-test"]
embedded = [
    "embassy-stm32",
    "embassy-usb",
    "cortex-m",
    "cortex-m-rt"
]

[dependencies]
embassy-executor = { version = "0.5.0", features = ["defmt", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
defmt = "0.3"
defmt-rtt = "0.4"
defmt-semihosting = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Conditional embedded dependencies
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "exti", "time"], optional = true }
embassy-usb = { version = "0.1.0", features = ["defmt"], optional = true }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }

# Non-embedded dependencies that work in both environments
bitfield-struct = "0.8"
heapless = "0.8"
eeprom = "0.2.0"
defmt-test = { version = "0.3", optional = true }
