[package]
name = "sensor-swarm"
version = "0.1.0"
edition = "2021"


[lib]
harness = false


[[bin]]
name = "sensor-swarm"
test = false


[[test]]
name = "integration"
harness = false


[features]
default = ["blackpill-f401", "embedded", "defmt-test"]
blackpill-f401 = []
hil = []
defmt-test = ["dep:defmt-test"]
embedded = [
    "embassy-stm32",
    "embassy-usb",
    "cortex-m",
    "cortex-m-rt"
]

[dependencies]
embassy-executor = { version = "0.8.0", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "generic-queue-8"] }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
defmt-semihosting = "0.3.0"
panic-probe = { version = "1.0.0", features = ["print-defmt", "defmt"] }

# Conditional embedded dependencies
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f401ce", "unstable-pac", "memory-x", "time-driver-any", "exti", "time"], optional = true }
embassy-usb = { version = "0.2.0", features = ["defmt"], optional = true }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }

# Non-embedded dependencies that work in both environments
bitfield-struct = "0.11.0"
heapless = "0.8"
eeprom = "0.3.1"

# Test dependencies
defmt-test = { version = "0.4.0", optional = true }


[dev-dependencies]
